[package]
name = "coordinode-vector"
description = "Vector search: HNSW index, scalar quantization, distance metrics with SIMD"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
coordinode-core = { workspace = true }
coordinode-storage = { workspace = true }
crossbeam-epoch = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
smallvec = { version = "1.13", features = ["serde", "union"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
# Diagnostic counter for distance-kernel invocations (thread-local,
# no atomics). Bench-only: lets the harness compare distance-call
# volume against competitors at equal recall. Never enable in
# production builds.
dist-counters = []

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
rmp-serde = { workspace = true }
tempfile = { workspace = true }

# Loom is referenced inside `#[cfg(loom)]` blocks in src/hnsw/neighbours.rs,
# so it must be a regular (non-dev) dep visible to the lib build.  All loom
# code is gated by `#[cfg(loom)]`, so regular builds compile none of it.
# The dep is small (~30 KB) and only impacts dependency resolution, not
# compilation output, when --cfg loom is not set.
[target.'cfg(loom)'.dependencies]
loom = "0.7"

[[bench]]
name = "hnsw_search"
harness = false

[[bench]]
name = "hnsw_parallel_search"
harness = false

[[bench]]
name = "hnsw_batch_insert"
harness = false

[[bench]]
name = "rabitq_kernel"
harness = false

[[bench]]
name = "distance_kernel_variants"
harness = false

# Cannot use workspace lints because SIMD intrinsics require unsafe.
# This is the ONLY crate with unsafe_code = "allow".
# All SIMD functions have scalar fallbacks and use runtime feature detection.
[lints.rust]
unsafe_code = "allow"
# `loom` is a custom cfg flag enabled via `RUSTFLAGS="--cfg loom"` for the
# model-checker test build only. Register it so rustc doesn't warn.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
# The ADR-041 partition guard (clippy.toml `disallowed-types`) is global and
# warn-by-default; only coordinode-query opts into it. Keep it inert here —
# this storage-adjacent crate legitimately names partitions.
disallowed_types = "allow"
